# PumpkinSpice

./: .gitignore  .golangci.yml  Makefile  README.md  app.py  compose.yaml  dockerfile  go.mod  go.sum  pyproject.toml  test.py
cmd/server/: main.go
internal/llm/openai/: chat.go  client.go
internal/server/: handlers.go  routes.go  server.go
simulations/: result.txt
